trying to learn form

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <p>This is my html file to learn html</p>
+    <form>
+        <label for="name">Enter your Full name</label>
+        <input type="text" id="name" name="name" required />
+
+    </form>
 </body>
 </html>
